--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,25 @@
 apply plugin: 'com.android.application'
 
+
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('/home/tvaisanen/IdeaProjects/mtori/libs/jsoup-1.10.1.jar')
+    compile files('/home/tvaisanen/IdeaProjects/mtori/libs/universal-image-loader-1.9.5.jar')
+    compile files('/home/tvaisanen/AndroidStudioProjects/mtori_v.0.2/libs/httpclient-4.5.2.jar')
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
+    compile 'com.google.android.gms:play-services-ads:10.0.1'
+    testCompile 'junit:junit:4.12'
+}
+
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "com.tori.tv.mtori"
+        applicationId "com.tvaisanen.soitintori"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
@@ -20,31 +34,13 @@ android {
     packagingOptions {
         //exclude 'META-INF/DEPENDENCIES'
         //exclude 'META-INF/NOTICE'
-        //exclude 'META-INF/LICENSE'
-        //exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
         //exclude 'META-INF/NOTICE.txt'
     }
 
 }
 
-dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    //compile files('/home/tvaisanen/Temp/httpcomponents-client-4.5.2/lib/commons-codec-1.9.jar')
-    //compile files('/home/tvaisanen/Temp/httpcomponents-client-4.5.2/lib/commons-logging-1.2.jar')
-    //compile files('/home/tvaisanen/Temp/httpcomponents-client-4.5.2/lib/fluent-hc-4.5.2.jar')
-    //compile files('/home/tvaisanen/Temp/httpcomponents-client-4.5.2/lib/httpclient-4.5.2.jar')
-    //compile files('/home/tvaisanen/Temp/httpcomponents-client-4.5.2/lib/httpclient-cache-4.5.2.jar')
-    //compile files('/home/tvaisanen/Temp/httpcomponents-client-4.5.2/lib/httpclient-win-4.5.2.jar')
-    //compile files('/home/tvaisanen/Temp/httpcomponents-client-4.5.2/lib/httpcore-4.4.4.jar')
-    //compile files('/home/tvaisanen/Temp/httpcomponents-client-4.5.2/lib/httpmime-4.5.2.jar')
-    //compile files('/home/tvaisanen/Temp/httpcomponents-client-4.5.2/lib/jna-4.1.0.jar')
-    //compile files('/home/tvaisanen/Temp/httpcomponents-client-4.5.2/lib/jna-platform-4.1.0.jar')
 
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.android.support:design:24.0.0'
-    compile 'com.android.support:support-v4:24.0.0'
-    compile files('/home/tvaisanen/IdeaProjects/mtori/libs/jsoup-1.10.1.jar')
-    compile files('/home/tvaisanen/IdeaProjects/mtori/libs/universal-image-loader-1.9.5.jar')
-}
 
+apply plugin: 'com.google.gms.google-services'
