--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tori.tv.mtori">
+    package="com.tvaisanen.soitintori">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -15,10 +15,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:configChanges="orientation|screenSize">
 
         <activity
-            android:name=".Activities.SplashActivity"
+            android:name="com.tvaisanen.soitintori.Activities.SplashActivity"
             android:label="@string/app_name"
             android:theme="@style/SplashTheme">
             <intent-filter>
@@ -28,7 +29,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Activities.SearchActivity">
+        <activity android:name="com.tvaisanen.soitintori.Activities.SearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,15 +38,29 @@
         </activity>
 
 
-        <activity android:name=".Activities.ProductViewActivity"/>
         <activity
-            android:name=".Activities.LoginActivity"
+            android:name="com.tvaisanen.soitintori.Activities.ProductViewActivity"
+            android:label="child"
+            android:parentActivityName="com.tvaisanen.soitintori.Activities.SearchActivity"/>
+
+
+
+        <activity
+            android:name="com.tvaisanen.soitintori.Activities.LoginActivity"
             android:label="@string/title_activity_login" />
         <activity
-            android:name=".Activities.InstantMessagingActivity"
+            android:name="com.tvaisanen.soitintori.Activities.InstantMessagingActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_instant_messaging"
             android:theme="@style/FullscreenTheme"></activity>
+
+        <!--This meta-data tag is required to use Google Play Services.-->
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <activity android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
+
     </application>
 
 </manifest>
